Replace callback with asynchronous pub/sub using ZMQ

--- a/watchdog/tutorial.ipynb
+++ b/watchdog/tutorial.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,36 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e8827a5c5414505b01ab1d202ef90d5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FigureWidget({\n",
-       "    'data': [{'mode': 'markers',\n",
-       "              'name': 'read_voltage',\n",
-       "              'type': 's…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Noisy voltage below threshold!\n",
-      "Noisy voltage below threshold!\n",
-      "Noisy voltage below threshold!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from watchdog import Monitor\n",
     "m = Monitor(visualize=True)\n",
@@ -77,13 +50,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Watching new variables\n",
+    "## Watching new variables\n",
     "New variables can be added dynamically while the monitor is running:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,61 +98,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Callbacks\n",
-    "You can pass a callback to the monitor to implement custom functionality with each monitoring cycle. For example, let's create a class which displays the last 5 datapoints in real time:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b8c41ec6c354f6fb9f2187b74f7a2cf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import pandas as pd \n",
-    "from IPython.display import display, HTML, clear_output\n",
-    "from ipywidgets import Output\n",
-    "\n",
-    "class Display:\n",
-    "    def __init__(self):\n",
-    "        self.data = pd.DataFrame()\n",
-    "        self.output = Output()\n",
-    "        display(self.output)\n",
-    "        \n",
-    "    def callback(self, data):\n",
-    "        self.data = self.data.append(data)\n",
-    "        self.data = self.data[-5::]\n",
-    "        with self.output:\n",
-    "            clear_output(wait=True)\n",
-    "            display(HTML(self.data.to_html()))\n",
-    "    \n",
-    "m.callback = Display().callback"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "To stop the monitoring, call the Monitor.stop() method:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,13 +114,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Triggering\n",
-    "Monitoring can be synced to some other process through software triggers, e.g. TTL pulses acquired with a DAQ board. Just define a method which returns as soon as a trigger is received and pass it into the Monitor.start_triggered() method. Let's simulate a trigger arriving once per second:"
+    "## Triggering\n",
+    "Monitoring can be synced to some other process through software triggers, e.g. TTL pulses acquired with a DAQ board. Just define a method which returns as soon as a trigger is received and pass the trigger into the Monitor.start() method. Let's simulate a trigger arriving once per second:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,11 +134,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "m.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subscribing to monitor feeds\n",
+    "By default, the Monitor class publishes new data using the ZeroMQ protocol on 127.0.0.1:1105 (these default settings can be changed through the ``address`` and ``port`` keyword arguments). Other classes can subscribe to this feed using the Subscriber class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from watchdog import Subscriber\n",
+    "        \n",
+    "s = Subscriber()\n",
+    "s.get()"
    ]
   },
   {
