Create a general method for extending Monitor's capabilities through callbacks, and refactor Visualizer and Publisher into this scheme. Add InfluxClient.

--- a/watchdog/tutorial.ipynb
+++ b/watchdog/tutorial.ipynb
@@ -33,17 +33,16 @@
    "outputs": [],
    "source": [
     "from watchdog import Monitor\n",
-    "m = Monitor(visualize=True)\n",
+    "m = Monitor()\n",
     "m.watch(read_voltage)\n",
-    "m.start(period=1)\n",
-    "m.plot()"
+    "m.start(period=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the Monitor.start_periodic method uses Python's sched module for event scheduling to avoid accumulated drifts. For example, if your check() method takes 50 ms to return and you call it in a loop with a 1s delay, the true time between checks will actually be 1.05 s. Using the scheduler allows drift-free checking; however, you should make sure that the check() call always returns in a time shorter than your chosen period!"
+    "The periodic acquisiton uses Python's sched module for event scheduling to avoid accumulated drifts. For example, if your check() method takes 50 ms to return and you call it in a loop with a 1 s delay, the true time between checks will actually be 1.05 s. Using the scheduler allows drift-free checking; however, you should make sure that the check() call always returns in a time shorter than your chosen period!"
    ]
   },
   {
@@ -145,8 +144,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Subscribing to monitor feeds\n",
-    "By default, the Monitor class publishes new data using the ZeroMQ protocol on 127.0.0.1:1105 (these default settings can be changed through the ``address`` and ``port`` keyword arguments). Other classes can subscribe to this feed using the Subscriber class:"
+    "# Extensions\n",
+    "By default, Watchdog runs in a very lightweight mode which only acquires data and stores it internally. More sophisticated behavior can be added by registering an extension class using the ``Monitor.add_extension()`` method. As well as the supported classes, you can create custom extensions - the only requirement is that they have an ``update(data)`` method which takes a pandas DataFrame and processes it however you'd like."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Live plotting\n",
+    "Interactive realtime plotting in Jupyter notebooks is enabled by attaching a Visualizer to the Monitor:"
    ]
   },
   {
@@ -155,10 +162,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog import Subscriber\n",
-    "        \n",
-    "s = Subscriber()\n",
-    "s.get()"
+    "from watchdog.extensions import Visualizer\n",
+    "vis = Visualizer()\n",
+    "m.add_extension(vis)\n",
+    "vis.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ZMQ feed\n",
+    "A ZeroMQ-based pub-sub protocol can be implemented by attaching a Publisher object to the Monitor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from watchdog.extensions import Publisher\n",
+    "m.add_extension(Publisher(address='127.0.0.1', port=1107))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Publisher will broadcast each new measurement on the specified address and port. To receive these messages, you can create a Subscriber:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from watchdog.extensions import Subscriber\n",
+    "sub = Subscriber(address='127.0.0.1', port=1107)\n",
+    "sub.get()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This can be used to broadcast data to other processes for analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TICK database\n",
+    "For long-term monitoring with large datasets, the pandas + ZeroMQ stack can be replaced with an InfluxDB database. The InfluxClient class can be used for this purpose:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from watchdog.extensions import InfluxClient\n",
+    "m.add_extension(InfluxClient(address='127.0.0.1', port=8086, database='demo'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same client class can be used to retrieve data from other scripts on any networked PC:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_client = InfluxClient(address='127.0.0.1', port=8086, database='demo')\n",
+    "other_client.read()"
    ]
   },
   {
