Add Listeners: data feeds asynchronous to the monitoring cycle

--- a/watchdog/tutorial.ipynb
+++ b/watchdog/tutorial.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Monitoring\n",
+    "## Watchers\n",
     "The Monitor class allows you to track defined parameters, visualize their time series, and implement custom reactions if they go outside of defined thresholds. Let's say we have some function which measures and returns a voltage, which for the purposes of this tutorial we will generate from a normal distribution:"
    ]
   },
@@ -49,7 +50,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Watching new variables\n",
+    "### Plotting\n",
+    "Interactive realtime plotting in Jupyter notebooks is enabled by attaching a Visualizer to the Monitor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from watchdog.extensions import Visualizer\n",
+    "m.add_extension(Visualizer())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Watching new variables\n",
     "New variables can be added dynamically while the monitor is running:"
    ]
   },
@@ -62,6 +83,57 @@
     "def read_current():\n",
     "    return np.random.normal(0.1, 0.01)\n",
     "m.watch(read_current, name='current')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Listeners\n",
+    "You can also define passively-monitored objects - instead of being queried by the Monitor for their state, the Monitor can subscribe to a remote data source to be updated asynchronously with the monitoring cycle: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.listen('data feed', address='127.0.0.1', port=9000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's send random data into this feed every 250 ms:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from watchdog.extensions import Publisher\n",
+    "from threading import Thread \n",
+    "import time \n",
+    "\n",
+    "feed = Publisher('127.0.0.1', port=9000)\n",
+    "\n",
+    "def generate_data(feed):\n",
+    "    while True:\n",
+    "        feed.update(np.random.normal(0.3, 0.05))\n",
+    "        time.sleep(0.25)\n",
+    "        \n",
+    "Thread(target=generate_data, args=(feed,)).start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the plot is only updated once per second - this is because the feed is checked every 250 ms in a separate process and the result is put into a queue, which is read during the normal monitoring cycle."
    ]
   },
   {
@@ -91,6 +163,13 @@
     "    print('Noisy voltage below threshold!')\n",
     "    \n",
     "m.watch(read_noisy_voltage, threshold=(0.4, None), reaction = alert)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reactions for Listeners can be set as well; the logical comparison will be made during the monitoring cycle, not in the asychronous listening process."
    ]
   },
   {
@@ -149,11 +228,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Live plotting\n",
-    "Interactive realtime plotting in Jupyter notebooks is enabled by attaching a Visualizer to the Monitor:"
+    "from watchdog import Feed\n",
+    "pub = Feed('127.0.0.1', 5051)\n"
    ]
   },
   {
@@ -162,10 +243,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog.extensions import Visualizer\n",
-    "vis = Visualizer()\n",
-    "m.add_extension(vis)\n",
-    "vis.plot()"
+    "pub.update(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "type(pd.DataFrame()) == pd.DataFrame"
    ]
   },
   {
@@ -183,7 +271,11 @@
    "outputs": [],
    "source": [
     "from watchdog.extensions import Publisher\n",
-    "m.add_extension(Publisher(address='127.0.0.1', port=1107))"
+    "m.add_extension(Publisher(address='127.0.0.1', port=1107))\n",
+    "\n",
+    "\n",
+    "# write time in process: 250 +/- 25 us\n",
+    "# write time in thread: 175 +/- 50 us"
    ]
   },
   {
@@ -201,7 +293,7 @@
    "source": [
     "from watchdog.extensions import Subscriber\n",
     "sub = Subscriber(address='127.0.0.1', port=1107)\n",
-    "sub.get()"
+    "sub.receive()"
    ]
   },
   {
@@ -226,7 +318,10 @@
    "outputs": [],
    "source": [
     "from watchdog.extensions import InfluxClient\n",
-    "m.add_extension(InfluxClient(address='127.0.0.1', port=8086, database='demo'))"
+    "m.add_extension(InfluxClient(address='127.0.0.1', port=8086, database='demo2'))\n",
+    "\n",
+    "# time to write with process: 200 +/- 50 us\n",
+    "# time to write with string: 750 +/- 50 us"
    ]
   },
   {
@@ -242,16 +337,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "other_client = InfluxClient(address='127.0.0.1', port=8086, database='demo')\n",
+    "other_client = InfluxClient(address='127.0.0.1', port=8086, database='demo2')\n",
     "other_client.read()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -281,7 +369,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "288px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
