Consolidate port into address string, like '127.0.0.1:8000'

--- a/watchdog/tutorial.ipynb
+++ b/watchdog/tutorial.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.listen('data feed', address='127.0.0.1', port=9000)"
+    "m.listen('data feed', address='127.0.0.1:9000')"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "from threading import Thread \n",
     "import time \n",
     "\n",
-    "feed = Publisher('127.0.0.1', port=9000)\n",
+    "feed = Publisher('127.0.0.1:9000')\n",
     "\n",
     "def generate_data(feed):\n",
     "    while True:\n",
@@ -228,35 +228,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from watchdog import Feed\n",
-    "pub = Feed('127.0.0.1', 5051)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pub.update(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "type(pd.DataFrame()) == pd.DataFrame"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,11 +242,7 @@
    "outputs": [],
    "source": [
     "from watchdog.extensions import Publisher\n",
-    "m.add_extension(Publisher(address='127.0.0.1', port=1107))\n",
-    "\n",
-    "\n",
-    "# write time in process: 250 +/- 25 us\n",
-    "# write time in thread: 175 +/- 50 us"
+    "m.add_extension(Publisher('127.0.0.1:1107'))"
    ]
   },
   {
@@ -292,7 +259,7 @@
    "outputs": [],
    "source": [
     "from watchdog.extensions import Subscriber\n",
-    "sub = Subscriber(address='127.0.0.1', port=1107)\n",
+    "sub = Subscriber('127.0.0.1:1107')\n",
     "sub.receive()"
    ]
   },
@@ -318,10 +285,7 @@
    "outputs": [],
    "source": [
     "from watchdog.extensions import InfluxClient\n",
-    "m.add_extension(InfluxClient(address='127.0.0.1', port=8086, database='demo2'))\n",
-    "\n",
-    "# time to write with process: 200 +/- 50 us\n",
-    "# time to write with string: 750 +/- 50 us"
+    "m.add_extension(InfluxClient(address='127.0.0.1:8086', database='demo2'))"
    ]
   },
   {
@@ -337,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "other_client = InfluxClient(address='127.0.0.1', port=8086, database='demo2')\n",
+    "other_client = InfluxClient(address='127.0.0.1:8086', database='demo2')\n",
     "other_client.read()"
    ]
   }
