Rename library in preparation for pip release

--- a/vigilant/tutorial.ipynb
+++ b/vigilant/tutorial.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog import Monitor\n",
+    "from vigilant import Monitor\n",
     "m = Monitor()\n",
     "m.watch(read_voltage)\n",
     "m.start(period=1)"
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "from watchdog.extensions import Visualizer\n",
+    "from vigilant.extensions import Visualizer\n",
     "m.add_extension(Visualizer())"
    ]
   },
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog.extensions import Publisher\n",
+    "from vigilant.extensions import Publisher\n",
     "from threading import Thread \n",
     "import time \n",
     "\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "# Extensions\n",
-    "By default, Watchdog runs in a very lightweight mode which only acquires data and stores it internally. More sophisticated behavior can be added by registering an extension class using the ``Monitor.add_extension()`` method. As well as the supported classes, you can create custom extensions - the only requirement is that they have an ``update(data)`` method which takes a pandas DataFrame and processes it however you'd like."
+    "By default, Vigilant runs in a very lightweight mode which only acquires data and stores it internally. More sophisticated behavior can be added by registering an extension class using the ``Monitor.add_extension()`` method. As well as the supported classes, you can create custom extensions - the only requirement is that they have an ``update(data)`` method which takes a pandas DataFrame and processes it however you'd like."
    ]
   },
   {
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog.extensions import Publisher\n",
+    "from vigilant.extensions import Publisher\n",
     "m.add_extension(Publisher('127.0.0.1:1107'))"
    ]
   },
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog.extensions import Subscriber\n",
+    "from vigilant.extensions import Subscriber\n",
     "sub = Subscriber('127.0.0.1:1107')\n",
     "sub.receive()"
    ]
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from watchdog.extensions import InfluxClient\n",
+    "from vigilant.extensions import InfluxClient\n",
     "m.add_extension(InfluxClient(address='127.0.0.1:8086', database='demo2'))"
    ]
   },
