Pass period or trigger to Monitor constructor instead of Monitor.start() to allow dynamic updating

--- a/vigilant/tutorial.ipynb
+++ b/vigilant/tutorial.ipynb
@@ -34,9 +34,9 @@
    "outputs": [],
    "source": [
     "from vigilant import Monitor\n",
-    "m = Monitor()\n",
+    "m = Monitor(period=1)\n",
     "m.watch(read_voltage)\n",
-    "m.start(period=1)"
+    "m.start()"
    ]
   },
   {
@@ -207,7 +207,9 @@
     "    time.sleep(1)\n",
     "    return\n",
     "\n",
-    "m.start(trigger=trigger)"
+    "triggered_monitor=Monitor(trigger=trigger)\n",
+    "triggered_monitor.watch(read_voltage)\n",
+    "triggered_monitor.start()"
    ]
   },
   {
@@ -216,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.stop()"
+    "triggered_monitor.stop()"
    ]
   },
   {
@@ -322,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
