Change InfluxClient arguments for generality

--- a/vigilant/tutorial.ipynb
+++ b/vigilant/tutorial.ipynb
@@ -287,14 +287,14 @@
    "outputs": [],
    "source": [
     "from vigilant.extensions import InfluxClient\n",
-    "m.add_extension(InfluxClient(address='127.0.0.1:8086', database='demo2'))"
+    "m.add_extension(InfluxClient(database='vigilant', measurement='test'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same client class can be used to retrieve data from other scripts on any networked PC:"
+    "The same client class can be used to retrieve data from other scripts:"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "other_client = InfluxClient(address='127.0.0.1:8086', database='demo2')\n",
+    "other_client = InfluxClient(measurement='test')\n",
     "other_client.read()"
    ]
   }
