--- a/vigilant/tutorial.ipynb
+++ b/vigilant/tutorial.ipynb
@@ -287,7 +287,7 @@
    "outputs": [],
    "source": [
     "from vigilant.extensions import InfluxClient\n",
-    "m.add_extension(InfluxClient(database='vigilant', measurement='test'))"
+    "m.add_extension(InfluxClient(database='vigilant', measurement='test3'))"
    ]
   },
   {
@@ -303,7 +303,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "other_client = InfluxClient(measurement='test')\n",
+    "from vigilant.extensions import InfluxClient\n",
+    "\n",
+    "other_client = InfluxClient(database='vigilant', measurement='test3')\n",
     "other_client.read()"
    ]
   }
@@ -324,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   },
   "toc": {
    "base_numbering": 1,
